--- a/app/src/main/res/layout/cardview_clarify_hold.xml
+++ b/app/src/main/res/layout/cardview_clarify_hold.xml
@@ -2,31 +2,30 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="160dp"
     card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="4dp"
+    card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="#fabb51">
+            android:orientation="horizontal">
 
             <th.co.omc.memberdemo.customview.CustomTextview
                 android:id="@+id/clarify_hold_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center|top"
+                android:gravity="center|left"
                 android:layout_weight="9"
-                android:text="Hold : STHONLIN1609000006"
-                android:textSize="20dp"
-                android:textColor="@color/White"/>
+                android:text="STHONLIN1609000006"
+                android:textSize="22dp"/>
 
             <th.co.omc.memberdemo.customview.CustomTextview
                 android:id="@+id/clarify_number"
@@ -35,172 +34,119 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:text="No.10"
-                android:textSize="16dp"
-                android:textColor="@color/White"/>
+                android:textSize="16dp"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:id="@+id/clarify_hold_name"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingRight="16dp"
-                android:paddingLeft="10dp"
-                android:background="@color/table_data_row_even"
-                android:orientation="horizontal">
+                android:gravity="center|left"
+                android:textSize="20dp"
+                android:text="Clarify Demo"/>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/prefix_id"/>
+        </LinearLayout>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_id"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="0000001"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/prefix_name"/>
-
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_name"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="Clarify Demo"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingRight="16dp"
-                android:paddingLeft="10dp"
-                android:background="@color/BlanchedAlmond"
-                android:orientation="horizontal">
+                android:gravity="center|left"
+                android:textSize="20dp"
+                android:text="@string/clarify_hold_type"/>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/clarify_hold_type"/>
-
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_type"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|right"
-                    android:textSize="22dp"
-                    android:text="Normal"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:id="@+id/clarify_hold_type"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingRight="16dp"
-                android:paddingLeft="10dp"
-                android:background="@color/table_data_row_even"
-                android:orientation="horizontal">
+                android:gravity="center|right"
+                android:textSize="20dp"
+                android:text="Normal"/>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/clarify_hold_buy_date"/>
+        </LinearLayout>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_buy_date"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|right"
-                    android:textSize="22dp"
-                    android:text="200,000.00"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingRight="16dp"
-                android:paddingLeft="10dp"
-                android:background="@color/BlanchedAlmond"
-                android:orientation="horizontal">
+                android:gravity="center|left"
+                android:textSize="20dp"
+                android:text="@string/clarify_hold_buy_date"/>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/clarify_hold_pv"/>
-
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_pv"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|right"
-                    android:textSize="22dp"
-                    android:text="0.00"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:id="@+id/clarify_hold_buy_date"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingRight="16dp"
-                android:paddingLeft="10dp"
-                android:background="@color/table_data_row_even"
-                android:orientation="horizontal">
+                android:gravity="center|right"
+                android:textSize="20dp"
+                android:text="200,000.00"/>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:textSize="18dp"
-                    android:text="@string/clarify_hold_price"/>
+        </LinearLayout>
 
-                <th.co.omc.memberdemo.customview.CustomTextview
-                    android:id="@+id/clarify_hold_price"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center|right"
-                    android:textSize="22dp"
-                    android:text="999.99"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            </LinearLayout>
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|left"
+                android:textSize="20dp"
+                android:text="@string/clarify_hold_pv"/>
+
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:id="@+id/clarify_hold_pv"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|right"
+                android:textSize="20dp"
+                android:text="0.00"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|left"
+                android:textSize="20dp"
+                android:text="@string/clarify_hold_price"/>
+
+            <th.co.omc.memberdemo.customview.CustomTextview
+                android:id="@+id/clarify_hold_price"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|right"
+                android:textSize="20dp"
+                android:text="999.99"/>
 
         </LinearLayout>
 
